set up jasmine unit test runner

--- a/src/web/index.html
+++ b/src/web/index.html
@@ -126,7 +126,7 @@
 <script src="app/core/directives/show-alignment.directive.js"></script>
 <script src="app/core/directives/node.directive.js"></script>
 <script src="app/core/services/rubricRowEvaluation.service.js"></script>
-<script src="app/core/services/rubric.utils.service.js"></script>
+<script src="app/core/services/rubric-utils.service.js"></script>
 <script src="app/core/services/userActivity.service.js"></script>
 <script src="app/core/directives/collection-row.directive.js"></script>
 <script src="app/core/directives/row-title.directive.js"></script>
