writing unit tests for rubric-utils.service.spec.js

--- a/src/Client-Side-Testing/unit/SpecRunner.html
+++ b/src/Client-Side-Testing/unit/SpecRunner.html
@@ -15,8 +15,9 @@
   <script src="../../web/lib/angular/angular.js"></script>
 
   <script src="../node_modules/angular-mocks/angular-mocks.js"></script>
-  <script src="../node_modules/bardjs/dist/bard.js"></script>,
-  <script src="../node_modules/sinon/pkg/sinon.js"></script>,
+  <script src="../node_modules/bardjs/dist/bard.js"></script>
+  <script src="../node_modules/sinon/pkg/sinon.js"></script>
+  <script src="test-helpers/test-helper.js"></script>
 
   <script src="../../web/lib/angular-cookies/angular-cookies.js"></script>
   <script src="../../web/lib/angular-animate/angular-animate.js"></script>
