Home and observation added

--- a/src/mobileAppBuilder/eVAL/app/home/home.html
+++ b/src/mobileAppBuilder/eVAL/app/home/home.html
@@ -1,5 +1,11 @@
-<ion-view title="Home">
-    <ion-content>
-        This is home
+<ion-view view-title="Home">
+    <ion-content class="padding">
+        <div>Welcome</div>
+        <div>Pr Aberdin School 1!</div>
+        <div>
+            <hr/>
+            Active School Year:  2016
+            <hr/>
+        </div>
     </ion-content>
 </ion-view>
