--- a/src/mobileAppBuilder/eVAL/index.html
+++ b/src/mobileAppBuilder/eVAL/index.html
@@ -7,10 +7,13 @@
     <link href="app/lib/angular-toastr/dist/angular-toastr.css" rel="stylesheet" />
     <script src="app/lib/ionic/js/ionic.bundle.js"></script>
     <script src="app/lib/angular-local-storage/dist/angular-local-storage.js"></script>    
-
-    <script src="app/lib/angular-toastr/dist/angular-toastr.min.js"></script>
+    
+    <script src="app/lib/angular-toastr/dist/angular-toastr.tpls.min.js"></script>
+    <!--<script src="app/lib/angular-toastr/dist/angular-toastr.min.js"></script>-->
 
     <script src="app/lib/angular-cookies/angular-cookies.min.js"></script>
+    <script src="app/lib/lodash/lodash.min.js"></script>
+    <script src="app/lib/angular-lodash-module/angular-lodash-module.js"></script>
 
     <script src="app/blocks/logger/logger.module.js"></script>
     <script src="app/blocks/logger/logger.js"></script>
@@ -46,6 +49,9 @@
     <script src="app/login/login.controller.js"></script>
     
 
+    <script src="app/artifact/artifacts.module.js"></script>
+    <script src="app/artifact/artifact.service.js"></script>
+
 
     <!-- Needed for Cordova/PhoneGap (will be a 404 during development) -->
     <!--<script src="app/blocks/logger/logger.module.js"></script>
@@ -64,6 +70,7 @@
     <script src="app/app.js"></script>
     <script src="app/layout/container-controller.js"></script>
     <script src="app/home/home-controller.js"></script>
+    <script src="app/login/login.controller.js"></script>
 </head>
     <body ng-app="evalMobile" ng-controller="containerController as container">                  
         <ion-nav-view>            
