Creating a temprary branch to test something `

--- a/src/web/app/login/login.html
+++ b/src/web/app/login/login.html
@@ -11,6 +11,7 @@
                     <option value="ntps">Danielson SD</option>
                     <option value="conway">Mazano SD</option>
                     <option value="chehalis">CEL SD</option>
+                    <option value="multi">Users in Multiple Locations</option>
                 </select>
                 <br/>
                  <select class="form-control" ng-if="vm.district==='ntps'" ng-model="vm.username" >
@@ -22,25 +23,9 @@
                 <select class="form-control" ng-if="vm.district==='chehalis'" ng-model="vm.username"  >
                     <option ng-repeat="username in vm.chehalis_usernames" ng-value="username">{{username}}</option>
                 </select>
-             <!--   <select ng-show="" class="form-control" ng-model="vm.username" >
-                    <option value="North Thurston High School AD">North Thurston High School AD</option>
-                    <option value="North Thurston High School PRH">North Thurston High School PRH</option>
-                    <option value="North Thurston High School PR1">North Thurston High School PR1</option>
-                    <option value="North Thurston High School PR2">North Thurston High School PR2</option>
-                    <option value="North Thurston High School T1">North Thurston High School T1</option>
-                    <option value="North Thurston High School T2">North Thurston High School T2</option>
-                    <option value="North Thurston High School TMS">North Thurston High School TMS</option>
-                    <option value="North Thurston High School PMS">North Thurston High School PMS</option>
-                    <option value="North Thurston Public Schools DA">North Thurston Public Schools DA</option>
-                    <option value="North Thurston Public Schools DV">North Thurston Public Schools DV</option>
-                    <option value="North Thurston Public Schools DE1">North Thurston Public Schools DE1</option>
-                    <option value="North Thurston Public Schools DE2">North Thurston Public Schools DE2</option>
-                    <option value="North Thurston Public Schools DTE1">North Thurston Public Schools DTE1</option>
-                    <option value="North Thurston Public Schools DTE2">North Thurston Public Schools DTE2</option>
-                    <option value="North Thurston Public Schools DRM">North Thurston Public Schools DRM</option>
-                    <option value="South Bay Elementary AD">South Bay Elementary AD</option>
-                    <option value="achinn">Super Admin</option>
-                </select>-->
+                <select class="form-control" ng-if="vm.district==='multi'" ng-model="vm.username"  >
+                    <option ng-repeat="username in vm.multi_usernames" ng-value="username">{{username}}</option>
+                </select>
             </div>
             <button id="loginButton" ng-click="vm.login()" class="btn btn-primary block full-width m-b">Login</button>
             </form>
