--- a/src/web/index.html
+++ b/src/web/index.html
@@ -111,7 +111,6 @@
 <script src="app/core/services/evalSession.service.js"></script>
 <script src="app/core/services/utils.service.js"></script>
 <script src="app/core/directives/se-panel.directive.js"></script>
-<script src="app/core/services/CHINNrubricRowEvaluation.service.js"></script>
 <script src="app/core/services/authentication.service.js"></script>
 <script src="app/core/services/active-user-context.service.js"></script>
 <script src="app/core/services/work-area.service.js"></script>
@@ -215,6 +214,12 @@
 <script src="app/school-admin/school-admin.route.js"></script>
 <script src="app/school-admin/controllers/sa-left-navbar.controller.js"></script>
 <script src="app/school-admin/controllers/saDashboard.controller.js"></script>
+
+<script src="app/self-assessment/self-assessment.module.js"></script>
+<script src="app/self-assessment/self-assessment.route.js"></script>
+<script src="app/self-assessment/controllers/self-assessment-list.controller.js"></script>
+<script src="app/self-assessment/controllers/self-assessment.controller.js"></script>
+<script src="app/self-assessment/services/self-assessment.service.js"></script>
 
 <script src="app/student-growth-admin/student-growth-admin.module.js"></script>
 <script src="app/student-growth-admin/student-growth-admin.route.js"></script>
