--- a/src/mobileAppBuilder/eVAL/index.html
+++ b/src/mobileAppBuilder/eVAL/index.html
@@ -80,6 +80,7 @@
     <script src="app/observation/observation.route.js"></script>
     <script src="app/observation/services/observation-service.js"></script>
     <script src="app/observation/controllers/observation-controller.js"></script>
+    <script src="app/observation/controllers/observation-list-controller.js"></script>
 
 </head>
 <body ng-app="stateeval.mobile" ng-controller="containerController as container">
