checkpoint for training protocols

--- a/src/web/index.html
+++ b/src/web/index.html
@@ -206,10 +206,6 @@
 <script src="app/resources/services/resource.service.js"></script>
 <script src="app/resources/controllers/resource-view.controller.js"></script>
 
-<script src="app/video-library/video-library.module.js"></script>
-<script src="app/video-library/video-library.route.js"></script>
-<script src="app/video-library/controllers/videoListController.js"></script>
-
 <script src="app/school-admin/school-admin.module.js"></script>
 <script src="app/school-admin/school-admin.route.js"></script>
 <script src="app/school-admin/controllers/sa-left-navbar.controller.js"></script>
@@ -245,6 +241,12 @@
 <script src="app/super-admin/super-admin.route.js"></script>
 <script src="app/super-admin/services/super-admin.service.js"></script>
 <script src="app/super-admin/controllers/import-errors.controller.js"></script>
+
+<script src="app/training-protocols/training-protocols.module.js"></script>
+<script src="app/training-protocols/training-protocols.route.js"></script>
+<script src="app/training-protocols/controllers/training-protocol.controller.js"></script>
+<script src="app/training-protocols/controllers/training-protocol-list.controller.js"></script>
+<script src="app/training-protocols/services/training-protocol.service.js"></script>
 
 <script src="app/configuration/configuration.module.js"></script>
 <script src="app/configuration/configuration.route.js"></script>
